0.1.3
Added: A way to change the hard-coded max health limit (uses ASM, I don't think there's any other way)
Added: An ASM config file that has an option to change the max health cap (in config/scalinghealth)

0.1.2
Added: Custom health rendering now implemented.
Added: Some attribute modifier debug info. Displayed through WIT (not a dependency)
Changed: Main config file moved to its own folder (config/scalinghealth).
Fixed: Some mobs not having current health set correctly on spawn.
Fixed: Heart Container model not loading.

0.1.1
Changed the way attribute modifiers are applied.

0.1.0
Initial alpha release.